@@ -35,6 +35,9 @@
 (add-hook *binding-hook* 'init-*main-keys* 'init-*main-mouse*)
 
 
+(defun test-hello ()
+  (info-mode '("Hello" "World")))
+
 
 (defun help-on-clfswm ()
   "Open the help and info window"
